--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "polished": "^1.9.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-transition-group": "^2.4.0",
     "styled-components": "^3.3.3",
     "styled-normalize": "^8.0.0"
   },
